<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/item_food"
        android:icon="@drawable/img_food3"
        android:title="@string/menu_title_food"
        />
    <item
        android:id="@+id/item_drink"
        android:icon="@drawable/img_drink4"
        android:title="@string/menu_title_drink"
        />-->
    <item android:id="@+id/item_store"
        android:icon="@drawable/img_offers"
        android:title="@string/menu_title_store">
        <menu >
            <item
                android:id="@+id/item_food_drink"
                android:icon="@drawable/img_food2"
                android:title="@string/menu_title_food_drink"/>

            <item
                android:id="@+id/item_home_technology"
                android:icon="@drawable/img_tecnhnology"
                android:title="@string/menu_title_home_technology"/>

            <item
                android:id="@+id/item_fashion"
                android:icon="@drawable/img_fashion2"
                android:title="@string/menu_title_fashion"/>

            <item
                android:id="@+id/item_hypermarket"
                android:icon="@drawable/img_hypermarket"
                android:title="@string/menu_title_hypermarket"/>

            <item
                android:id="@+id/item_accessories"
                android:icon="@drawable/img_accessories"
                android:title="@string/menu_title_accessories"/>

            <item
                android:id="@+id/item_entertainment"
                android:icon="@drawable/img_entertainment"
                android:title="@string/menu_title_entertainment"/>

            <item
                android:id="@+id/item_others"
                android:icon="@drawable/img_others"
                android:title="@string/menu_title_others"/>
        </menu>
    </item>

       <!-- <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>-->



    <item android:id="@+id/item_other2"
        android:icon="@drawable/img_offers"
        android:title="@string/menu_title_offers">
        <menu >
            <group android:id="@+id/group2" android:checkableBehavior="single">
                <item
                    android:id="@+id/item_offers"
                    android:icon="@drawable/img_offers"
                    android:title="@string/menu_title_offers" />
            </group>
        </menu>
    </item>



    <item android:id="@+id/item_other4"
        android:icon="@drawable/img_events"
        android:title="@string/menu_title_events">
        <menu >
            <group android:id="@+id/group3" android:checkableBehavior="single">
                <item
                    android:id="@+id/item_events"
                    android:icon="@drawable/img_events"
                    android:title="@string/menu_title_events" />

            </group>
        </menu>
    </item>


</menu>